--- a/frontend/style.css
+++ b/frontend/style.css
@@ -46,6 +46,9 @@ h1 {
   cursor: pointer;
   box-shadow: 0px 2px 5px rgb(0, 0, 0, 0.5);
 }
+.downloadAsPDF{
+  background: #1a6ab1;
+}
 
 .disabled {
   display: none;
