close #33 replace `change-password` endpoint with `reset-password`

--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -14,7 +14,7 @@
     <span><%= locals.email %></span>
     <a href="/create">Create New</a>
     <div>
-        <a href="/change-password">Change Password</a>
+        <a href="/reset-password">Change Password</a>
     </div>
 </body>
 
