(feat/refactor): add and update cookies expiration to `2 hours` and replace query params with route params

--- a/views/change-password.ejs
+++ b/views/change-password.ejs
@@ -10,7 +10,7 @@
 <body>
     <h2>Change Password</h2>
     <!-- we will add confirm password, if it is required for the time being its ok -->
-    <form action="/change-password" method="post">
+    <form action="/change-password/<%= locals.userId ?? locals.error.userId %>/<%= locals.token ?? locals.error.token%>" method="post">
         <input type="password" name="password" class="change-password" placeholder="Change Password" value="<%= locals.error?.formData?.password %>">
         <input type="submit" value="Update Password">
     </form>
